--- a/SI539/ICE1/index.html
+++ b/SI539/ICE1/index.html
@@ -27,7 +27,9 @@
   <nav>
     <a href="https://janezio.github.io/ICE1/index.html">Jane</a>
     <a href="https://dailinou.github.io/ICE1/Linou.html">Linou</a>
-    <a href="https://xckou.github.io/SI539/ICE1/index.html">Xiaochuan</a>    
+    <a href="https://xckou.github.io/SI539/ICE1/index.html">Xiaochuan</a>
+    <a href="https://yuansavannalee.github.io/ICE1new/IC1new.html">Yuan</a>
+ 
   </nav>
 
     <p>Start browsing the website with music! </p>
@@ -48,21 +50,17 @@
 		<label for="place">
         Place:</label>
 		<input type="text" name="place" id = "place"><br>
- <section>
+
 		Please enter your choice of the place you want to go for Christmas:<br>
 		<input type="radio" name="place" value="Wyoming"> Wyoming<br>
   		<input type="radio" name="place" value="New Orleans"> New Orleans<br>
   		<input type="radio" name="place" value="Ann Arbor"> Ann Arbor<br> 
-    </section>
-     <section>
-
-     <div>
+   
         And vote for the best picture we took!:<br>
-		<input type="radio" name="place" value="Jane"> Jane <br>
-  		<input type="radio" name="place" value="Linou"> Linou<br>
-  		<input type="radio" name="place" value="Xiaochuan"> Xiaochuan<br>
-    </div>
-  		    </section>
+		<input type="radio" name="picture" value="Jane"> Jane <br>
+  		<input type="radio" name="picture" value="Linou"> Linou<br>
+  		<input type="radio" name="picture" value="Xiaochuan"> Xiaochuan<br>
+ 
 
     </form>
 
