--- a/SI539/ICE1/index.html
+++ b/SI539/ICE1/index.html
@@ -45,10 +45,9 @@
     <p>We tried so many seafood there and I hope I can go there again with my friends! </p>
     
     <form>
-		Name:
-		<input type="text" name="name" id = "name"></label><br>
-		<label for="place">
-        Place:</label>
+		<label for="name">Name</label>
+		<input type="text" name="name" id = "name"><br>
+        <label for ="place">Place:</label>
 		<input type="text" name="place" id = "place"><br>
 
 		Please enter your choice of the place you want to go for Christmas:<br>
