--- a/SI539/Portfolio/uxdesign.html
+++ b/SI539/Portfolio/uxdesign.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
+    
     <title>Xiaochuan Kou</title>
  
     <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
