--- a/SI539/Portfolio/research.html
+++ b/SI539/Portfolio/research.html
@@ -50,7 +50,7 @@
         </div>
                     
         <div class = "menloImg">
-        <img src="assets/images/photos/menlo.jpg" alt="menlo" width = "80%">
+        <img src="assets/images/photos/menlo.jpg" alt="menlo">
         </div>
         
         <div class = contentA>
