--- a/SI539/Portfolio/vekup.html
+++ b/SI539/Portfolio/vekup.html
@@ -18,7 +18,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navBar">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navBar"aria-label="collapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
