--- a/SI539/Portfolio/index.html
+++ b/SI539/Portfolio/index.html
@@ -27,7 +27,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navBar">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navBar" aria-label="collapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
