--- a/SI649/index.html
+++ b/SI649/index.html
@@ -550,7 +550,25 @@ function doubleForce(){
 			// 	.attrTween("transform", translateAlong(path.node()));
 
 				
+var line4 = svg.append("line")
+	    // .data(data)
 
+             .attr("x1",haha4)  
+             .attr("y1",hihi4)  
+             .attr("x2",haha)  
+             .attr("y2",hihi4) 
+             .attr("stroke","#d1e8f4")  
+             .attr("stroke-width",6);
+
+    var line5 = svg.append("line")
+	    // .data(data)
+
+             .attr("x1",r)  
+             .attr("y1",100)  
+             .attr("x2",haha)  
+             .attr("y2",hihi) 
+             .attr("stroke","#d1e8f4")  
+             .attr("stroke-width",6);      
 	var line = svg.append("line")
 	    // .data(data)
 
@@ -575,25 +593,7 @@ function doubleForce(){
 ;
 
 
-var line4 = svg.append("line")
-	    // .data(data)
 
-             .attr("x1",haha4)  
-             .attr("y1",hihi4)  
-             .attr("x2",haha)  
-             .attr("y2",hihi4) 
-             .attr("stroke","#d1e8f4")  
-             .attr("stroke-width",6)
-
-    var line5 = svg.append("line")
-	    // .data(data)
-
-             .attr("x1",r)  
-             .attr("y1",100)  
-             .attr("x2",haha)  
-             .attr("y2",hihi) 
-             .attr("stroke","#d1e8f4")  
-             .attr("stroke-width",6)      
 
     var line3 = svg.append("line")
 
