--- a/SI649/index.html
+++ b/SI649/index.html
@@ -40,8 +40,7 @@
 	 			<h6></br></h6>
 	 			<h5>How Does "Force" Work?</h5>
                	<h6>You are going to create a force! Select a value from the slider and see what happens.</h6>
-
-               	<h6>(Try to start with a small value and then a relatively bigger one, like 10 and 200, so the change will be more obvious!)
+               	<h6>(Try to start with a small value and then a relatively bigger one, like 10 and 200, so the change will be more obvious!)</h6>
 
 
                	<div class='chart' style="margin-top:20px">
@@ -224,7 +223,7 @@
 			</fieldset>
 
 			<fieldset>
-				<label>Angle between A and B:</label>
+				<label>Angle between A and B (∠θ):</label>
 				<input id=c class= slider type=range min=0 max=180 step=1 oninput='draw()' value=45 />
 				<output />
 			</fieldset>
