--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>lol</p>
-<p>I'm hosted with GitHub Pages.</p>
+
+<h1>我的第一个标题</h1>
+
+<p>我的第一个段落。</p>
+
 </body>
 </html>
