--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <body>
+<link href="styles.css">
 
-<h1>我的第一个标题</h1>
+	
 
-<p>我的第一个段落。</p>
+<h1>Xiaochuan Kou</h1>
+
+<p>User Experience Designer</p>
+<p>Project</p>
 
 </body>
 </html>
